--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.21
-loader_version=0.14.9
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.23
 
 # Mod Properties
-mod_version         = 4.0.0+1.19
-maven_group         = niv.flowstone
-archives_base_name  = flowstone
+mod_version=5.0.0+1.20.1
+maven_group=niv.flowstone
+archives_base_name=flowstone
+project_id=yT1pBihO
+
+# Dependencies
+fabric_version=0.90.0+1.20.1
